# _LucenePlusPlus

src/core/index/: FieldsReader.cpp
src/demo/: CMakeLists.txt
src/demo/ngram/: CMakeLists.txt  main.cpp
src/test/index/: FieldsReaderTest.cpp
